WEB-148 fixes, navigation and content marginals. Scrollbar area.

--- a/_sass/_constants.scss
+++ b/_sass/_constants.scss
@@ -11,10 +11,11 @@ $section-padding-left-and-right: 0px;/*40px;*/
 $wrapper-padding: 0px;/*20px;*/
 
 $navigation-width: 300px;
-$navigation-and-content-padding: 10px;
+$content-padding-top-bottom: 10px;
+$content-padding-left-right: 20px;
 $navigation-element-height: 34px;
 $navigation-border-right: 1px;
-$navigation-level-padding: 20px;
+$navigation-level-padding: 14px;
 
 /* section element margin-bottom, and ul padding-left */
 $default-content-spacing: 20px;
