--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -20,7 +20,7 @@
             overflow-x: auto;
         }
         
-        height: calc(100vh - #{$header-height} - #{$footer-height} - (#{$section-padding-top-and-bottom} * 2) - 15px);        
+        height: calc(100vh - #{$header-height} - #{$footer-height} - (#{$section-padding-top-and-bottom} * 2));        
         padding: $section-padding-top-and-bottom $section-padding-left-and-right;
         float: none;
         width: calc(100% - (#{$section-padding-left-and-right} * 2));
@@ -94,16 +94,17 @@
                     
                     /* Different levels*/
                     ul li{
-                        padding-left: calc(#{$navigation-level-padding} * 2);
+                        padding-left: $navigation-level-padding;
                         /*a{
                             width: calc(100% - (#{$navigation-level-padding} * 2));
                         }*/
                     }
                     
                     ul li ul li{
-                        padding-left: calc(#{$navigation-level-padding} * 3);
+                        padding-left: $navigation-level-padding;
                         a{
-                            width: 100%;
+                            margin-left: $navigation-level-padding;
+                            width: calc(100% - #{$navigation-level-padding});
                         }
                     }
                 }
@@ -143,14 +144,13 @@
             .title{
                 border-bottom: 1px solid $content-border-color;
                 padding-bottom: $title-padding;
-                text-align: center;
             }
             .breadcrumbs{
                 margin: $breadcrumbs-margin 0;
             }
             .content{
-                padding: $navigation-and-content-padding; 
-                height: calc(100% - (#{$navigation-and-content-padding} * 2));
+                padding: $content-padding-top-bottom $content-padding-left-right; 
+                height: calc(100% - (#{$content-padding-top-bottom} * 2));
                 overflow-y: auto;
             }
             &:after {
